--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,15 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/displaydata.js", 
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
-      "src": "/api/(.*)", 
-      "dest": "/api/displaydata.js"
-    },
-    {
-      "src": "/",
-      "dest": "/api/displaydata.js"
-    },
-    {
-      "src": "/login",
-      "dest": "/public/login.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
+      "src": "/(.*)",  
+      "dest": "api/displaydata.js"
     }
   ]
 }
